Homepage: use real UNO +4 card image in assets
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -173,40 +173,18 @@
     .uno-cards {
       display: flex; gap: .5rem; justify-content: center; margin-bottom: .5rem;
     }
-    /* Real UNO card proportions (~1 : 1.45), proper +4 look */
     .uno-card-mini {
-      width: clamp(52px, 14vw, 72px);
-      aspect-ratio: 1 / 1.45;
-      border-radius: 6px;
-      display: flex; align-items: center; justify-content: center;
-      font-family: 'Fredoka One', cursive; font-size: clamp(0.95rem, 4vw, 1.35rem); font-weight: bold; color: #fff;
+      width: clamp(56px, 15vw, 80px);
+      display: block;
       transform: rotate(var(--rot, 0deg));
-      position: relative;
-      overflow: hidden;
-      background: #0d0d0d;
-      border: 3px solid #e8e6e0;
-      box-shadow:
-        inset 0 1px 0 rgba(255,255,255,.08),
-        0 2px 0 rgba(0,0,0,.15),
-        0 4px 12px rgba(0,0,0,.4),
-        0 8px 24px rgba(0,0,0,.25);
+      border-radius: 8px;
+      box-shadow: 0 4px 16px rgba(0,0,0,.35), 0 8px 24px rgba(0,0,0,.2);
     }
-    /* Four quadrants like real Wild +4 (red, yellow, green, blue) */
-    .uno-card-mini::before {
-      content: ''; position: absolute; inset: 4px;
-      background: conic-gradient(
-        at 50% 50%,
-        var(--uno-red) 0deg 90deg,
-        var(--uno-yellow) 90deg 180deg,
-        var(--uno-green) 180deg 270deg,
-        var(--uno-blue) 270deg 360deg
-      );
-      border-radius: 4px;
-    }
-    .uno-card-mini span {
-      position: relative; z-index: 1;
-      text-shadow: 0 1px 2px rgba(0,0,0,.9), 0 0 1px #000;
-      filter: drop-shadow(0 1px 0 rgba(255,255,255,.15));
+    .uno-card-mini img {
+      width: 100%;
+      height: auto;
+      display: block;
+      border-radius: 8px;
     }
 
     /* ---- SETUP SCREEN ---- */
@@ -528,10 +506,10 @@
   <div id="home" class="screen active">
     <div>
       <div class="uno-cards">
-        <div class="uno-card-mini" style="--rot:-8deg;"><span>+4</span></div>
-        <div class="uno-card-mini" style="--rot:-3deg;"><span>+4</span></div>
-        <div class="uno-card-mini" style="--rot:3deg;"><span>+4</span></div>
-        <div class="uno-card-mini" style="--rot:8deg;"><span>+4</span></div>
+        <div class="uno-card-mini" style="--rot:-8deg;"><img src="assets/uno-plus4.png" alt="" width="160" height="232"></div>
+        <div class="uno-card-mini" style="--rot:-3deg;"><img src="assets/uno-plus4.png" alt="" width="160" height="232"></div>
+        <div class="uno-card-mini" style="--rot:3deg;"><img src="assets/uno-plus4.png" alt="" width="160" height="232"></div>
+        <div class="uno-card-mini" style="--rot:8deg;"><img src="assets/uno-plus4.png" alt="" width="160" height="232"></div>
       </div>
       <h1 class="logo-title">Lunes de UNO</h1>
       <p class="logo-sub" data-i18n="home_sub"></p>
